Fix Signature textbox being too small

--- a/theme/stylesheet.css
+++ b/theme/stylesheet.css
@@ -300,13 +300,6 @@ span.description {
 /* posting related stuff */
 
 .posting-container {
-  background: rgba(0, 0, 0, 0.03);
-  background-clip: padding-box;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
-  padding: 5px 20px;
-  overflow: hidden;
-  border-radius: 4px;
 }
 
 .posting-container #message-box .inputbox {
